# glfw

./: .gitignore  .travis.yml  AUTHORS  BUILD.bazel  GLFW_C_REVISION.txt  README.md  WORKSPACE.bazel  build.go  clipboard.go  cocoaclipboard_darwin.go  cocoamonitor_darwin.go  context.go  error.c  error.go  gamma.c  gamma.go  gears.go  glfw.go  glfw_c_pull.sh  glfw_clipboard.c  glfw_joystick.c  glfw_posix_tls.c  glfw_time.c  glfw_win32_clipboard.c  glfw_win32_init.c  glfw_wl_clipboard.c  glfw_x11_clipboard.c  go.mod  input.c  input.go  iokitjoystick_darwin.go  monitor.c  monitor.go  native_darwin.go  native_linbsd.go  native_windows.go  nsglcontext_darwin.go  test.go  threading.go  time.go  (+3 more)
.github/workflows/: analysis.yml  build.yaml  tests.yml
scripts/: generate-buildable-source-code.sh  generate-wayland-protocols.sh  glfw_tree_rebuild.sh  grab-glfwff-upstream.sh  grab-upstream.sh
v3.0/glfw/: clipboard.go  context.go  error.go  glfw.go  input.go  monitor.go  native_darwin.go  native_linbsd.go  native_windows.go  time.go  util.go  window.go
v3.1/glfw/: GLFW_C_REVISION.txt  build.go  c_glfw_external.go  cocoainit_darwin.go  cocoamonitor_darwin.go  cocoawindow_darwin.go  context.go  error.go  glfw.go  glfw_context.c  glfw_egl_context.c  glfw_glx_context.c  glfw_init.c  glfw_input.c  glfw_linux_joystick.c  glfw_mach_time.c  glfw_monitor.c  glfw_posix_time.c  glfw_posix_tls.c  glfw_wgl_context.c  glfw_win32_init.c  glfw_win32_monitor.c  glfw_win32_time.c  glfw_win32_tls.c  glfw_win32_window.c  glfw_window.c  glfw_winmm_joystick.c  glfw_wl_init.c  glfw_wl_monitor.c  glfw_wl_window.c  glfw_x11_init.c  glfw_x11_monitor.c  glfw_x11_window.c  glfw_xkb_unicode.c  input.go  iokitjoystick_darwin.go  monitor.go  native_darwin.go  native_linbsd.go  native_windows.go  (+4 more)
v3.1/glfw/glfw/src/: internal.h
v3.1/glfw/testdata/customcursor/: main.go
v3.2/glfw/: GLFW_C_REVISION.txt  build.go  build_cgo_hack.go  c_glfw.go  c_glfw_darwin.go  c_glfw_linbsd.go  c_glfw_windows.go  context.go  error.go  glfw.go  glfw_vulkan.c  glfw_win32_joystick.c  input.go  monitor.go  native.go  native_darwin.go  native_linbsd.go  native_windows.go  time.go  util.go  vulkan.go  window.go
v3.2/glfw/glfw/src/: internal.h  wayland-idle-inhibit-unstable-v1-client-protocol.c  wayland-pointer-constraints-unstable-v1-client-protocol.c  wayland-relative-pointer-unstable-v1-client-protocol.c
v3.2/glfw/testdata/customcursor/: main.go
v3.3/glfw/: BUILD.bazel  GLFW_C_REVISION.txt  WORKSPACE.bazel  build.go  build_cgo_hack.go  c_glfw_darwin.go  c_glfw_freebsd.go  c_glfw_lin.go  c_glfw_linbsd.go  c_glfw_windows.go  context.go  error.go  glfw.go  glfw_tree_rebuild.go  go.mod  input.c  input.go  monitor.go  native_darwin.go  native_linbsd.go  native_windows.go  time.go  vulkan.c  vulkan.go  vulkan.h  window.c  window.go
v3.3/glfw/glfw/: LICENSE.md
v3.3/glfw/glfw/src/: internal.h  linux_joystick.c  linux_joystick.h  wayland-idle-inhibit-unstable-v1-client-protocol.c  wayland-pointer-constraints-unstable-v1-client-protocol.c  wayland-relative-pointer-unstable-v1-client-protocol.c  wayland-xdg-decoration-client-protocol.h  wayland-xdg-shell-client-protocol.h  wl_init.c  wl_platform.h  wl_window.c  x11_init.c  x11_monitor.c  x11_platform.h  x11_window.c
v3.3/glfw/testdata/customcursor/: main.go
v3.4/glfw/: GLFW_C_REVISION.txt  build.go  build_cgo_hack.go  c_glfw.go  c_glfw_bsd.go  c_glfw_darwin.go  c_glfw_lin.go  c_glfw_lin_wayland.go  c_glfw_lin_x11.go  c_glfw_windows.go  error.go  glfw.go  glfw_tree_rebuild.go  go.mod  input.c  input.go  monitor.go  native_darwin.go  native_linbsd_wayland.go  native_linbsd_x11.go  not_wayland.go  platform.go  util.go  vulkan.go  window.go
v3.4/glfw/glfw/: CONTRIBUTORS.md
v3.4/glfw/glfw/docs/: input.dox  intro.dox
v3.4/glfw/glfw/include/: xdg-shell-client-protocol.h
v3.4/glfw/glfw/include/GLFW/: glfw3.h
v3.4/glfw/glfw/src/: CMakeLists.txt  cocoa_init.m  cocoa_platform.h  cocoa_window.m  init.c  input.c  internal.h  null_init.c  null_platform.h  null_window.c  posix_poll.c  text-input-unstable-v1-client-protocol-code.h  text-input-unstable-v1-client-protocol.h  text-input-unstable-v3-client-protocol-code.h  text-input-unstable-v3-client-protocol.h  wayland-viewporter-client-protocol.h  wayland-xdg-shell-client-protocol.h  win32_init.c  win32_platform.h  win32_window.c  window.c  wl_init.c  wl_platform.h  wl_window.c  x11_init.c  x11_platform.h  x11_window.c
v3.4/glfw/glfw/tests/: events.c
v3.4/glfw/testdata/customcursor/: main.go
